app/assets/tailwind/application.css
@import "tailwindcss";

@plugin "@tailwindcss/forms";

@variant dark (&:where(.dark, .dark *));
@variant light (html:not(.dark) &);
@variant firefox (@-moz-document url-prefix());

@theme {
  --animate-ping-once: ping-sm 0.5s cubic-bezier(0, 0, 0.2, 1) 1;
  @keyframes ping-sm {
    75%,
    100% {
      transform: scale(1.5);
      opacity: 0;
    }
  }
  --animate-pulse-fast: pulse 1.5s cubic-bezier(0.6, 0, 0.4, 1) infinite;

  --size-5_5: 1.375em;

  --tracking-emojis: 0.5em;
}

@utility border-dim {
  @apply border-gray-300 dark:border-neutral-600;
}

@utility border-dim-lg {
  @apply border-gray-200 dark:border-neutral-700;
}

@utility border-dark {
  @apply border-gray-600 dark:border-neutral-950;
}

@utility text-dim-sm {
  @apply text-gray-600 dark:text-neutral-300;
}

@utility text-dim {
  @apply text-gray-500 dark:text-neutral-400;
}

@utility text-dim-lg {
  @apply text-gray-400 dark:text-neutral-500;
}

@utility text-dim-xl {
  @apply text-gray-300 dark:text-neutral-600;
}

@utility btn-basic {
  @apply cursor-pointer no-underline hover:opacity-80;
}

@utility btn-primary {
  @apply cursor-pointer select-none no-underline whitespace-nowrap
      border border-2
      border-gray-800 dark:border-gray-400
      px-4 py-1;

  &:hover,
  &:disabled {
    @apply ring-1
        ring-red-700 dark:ring-red-600
        border-red-700 dark:border-red-600;
  }
  &:disabled {
    @apply text-red-600 dark:text-red-600;
  }
}

@utility form-input {
  @apply bg-transparent focus:ring-0;

  &,
  &:focus {
    @apply border-transparent;
  }
  &,
  &:focus {
    @apply border-b-red-800 dark:border-b-red-600;
  }
}

@utility form-select {
  @apply bg-transparent focus:ring-0;

  &,
  &:focus {
    @apply border-transparent;
  }
}

@utility form-textarea {
  @apply bg-transparent focus:ring-0;

  &,
  &:focus {
    @apply border-transparent;
  }
  &,
  &:focus {
    @apply border-red-800 dark:border-red-600;
  }
}

@utility form-error {
  @apply text-red-600 dark:selection:bg-[#469dff];
}

@utility scrollbar-hidden {
  scrollbar-width: none;
  -ms-overflow-style: none;

  &::-webkit-scrollbar {
    display: none;
  }
}

@layer base {
  html {
    @apply font-mono;
  }

  body {
    @apply dark:bg-neutral-800 dark:text-neutral-200;
  }

  a,
  .a {
    @apply underline underline-offset-4
      hover:text-red-700 dark:hover:text-red-600;
  }

  header,
  footer {
    nav a {
      @apply py-2 no-underline;
    }
  }
  nav a {
    @apply border-2 border-transparent;

    &.active,
    &:hover {
      @apply no-underline border-b-red-700 dark:border-b-red-600;
    }
  }
  nav .no-active-links a {
    @apply border-none;
  }

  h1,
  .h1 {
    @apply text-3xl font-bold normal-case;
  }
  h2,
  .h2 {
    @apply text-2xl font-bold normal-case;
  }
  h3,
  .h3 {
    @apply text-xl font-bold uppercase;
  }
  h4,
  .h4 {
    @apply text-lg font-bold normal-case;
  }
  h5,
  .h5 {
    @apply text-base font-bold normal-case;
  }
  h6,
  .h6 {
    @apply text-base font-bold normal-case;
  }

  hr {
    @apply my-12 border-dotted border-dim;
  }

  small,
  .small {
    @apply text-[80%];
  }

  dfn {
    @apply border-b border-dashed border-gray-500 not-italic;
  }

  code {
    @apply px-2 py-1 rounded-sm whitespace-nowrap
      bg-gray-200 dark:bg-neutral-700
      dark:text-neutral-200
      select-all selection:bg-green-300 selection:text-green-900;
  }
}

@layer components {
  /*
  Floating-UI Tooltips

  Usage: See app/javascript/controllers/tooltip_controller.js
  */
  [data-controller="tooltip"] {
    [data-tooltip-target="tooltip"] {
      @apply hidden
        absolute top-0 left-0 z-10
        mb-1.5 mx-6 p-4 rounded-md
        bg-neutral-900
        font-normal text-base text-neutral-200;

      :not([data-tooltip-target="arrow"]) {
        @apply relative z-10;
      }
      [data-tooltip-target="arrow"] {
        @apply absolute size-6 -mx-6 rotate-45 bg-neutral-900;
      }
    }
  }

  /*
  Honeybadger Feedback Form
  - Shows on Custom Error Pages
  */
  #honeybadger_feedback_form {
    br,
    .honeybadger-feedback-name,
    .honeybadger-feedback-email,
    label[for="honeybadger_feedback_comment"] {
      @apply hidden;
    }

    input {
      @apply form-input;
    }

    #honeybadger_feedback_submit {
      @apply btn-primary;
    }
  }
  #honeybadger_feedback_link {
    @apply hidden;
  }
  #honeybadger_feedback_success {
    @apply text-center text-green-400;
  }
}

